--- a/arrival.html
+++ b/arrival.html
@@ -14,7 +14,7 @@
 
 
             <div class="card">
-              <div class="img"><img src="C:\Users\acer 123\Pictures\Siva\bedsheet.jpeg" alt=""></div>
+              <div class="img"><img src="bedsheet.jpeg" alt=""></div>
               <div class="desc"><b>BEDSHEET</b></div>
               <div class="title"></div>
               <div class="box">
